src/deployments/cluster/kube/taint-local-path-provisioner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/6xTzW7bTAx8lQ88S7L9OTFcAT0YSQoUbRyjAXoJjIJeUfHG+4ddWq1h6N0LWnKSonGSQ0/aFcnZIWe4Bwz6O8WkvYMSMIQ0aEaQwUa7Ckq4pGD8zpJjyMASY4WMUO4BnfOMrL1LcvWrB1KciIuofaGQ2VCh/UALCGQn4/6no5jfNxsoYTNOzyLNKPvvi3bVx1lVefcmhENLUILxCk2e2Ee8p3cVpYBKKjfbFeVpl5gstBkYXJF5tbU1pjWUMJqO6/G5mpzX9UqNh5OzyXBcn43r0fl0WE3VZIr/V7iqzgT0D5IBeZ2H6Bstw6cIXfwEnxRICZtIwWiFCcpRBokMKfZRAhZZrb8+ssYQTr/Uthkw2WCQ6VD7TFjzfogjJ+Udo3YUE5R3crUWxT13pztNjFEslefKu1rfQwYDYjXobv2neEjewTIDcs0BuZ/f4ubyx3x [...]
    objectset.rio.cattle.io/id: ""
    objectset.rio.cattle.io/owner-gvk: k3s.cattle.io/v1, Kind=Addon
    objectset.rio.cattle.io/owner-name: local-storage
    objectset.rio.cattle.io/owner-namespace: kube-system
  creationTimestamp: "2021-09-11T17:03:25Z"
  generation: 1
  labels:
    objectset.rio.cattle.io/hash: 183f35c65ffbc3064603f43f1580d8c68a2dabd4
  name: local-path-provisioner
  namespace: kube-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: local-path-provisioner
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      # creationTimestamp: null
      labels:
        app: local-path-provisioner
    spec:
      containers:
      - command:
        - local-path-provisioner
        - start
        - --config
        - /etc/config/config.json
        image: rancher/local-path-provisioner:v0.0.19
        imagePullPolicy: IfNotPresent
        name: local-path-provisioner
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/config/
          name: config-volume
      dnsPolicy: ClusterFirst
      priorityClassName: system-node-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: local-path-provisioner-service-account
      serviceAccountName: local-path-provisioner-service-account
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: local-path-config
        name: config-volume
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
      nodeSelector:
        kubernetes.io/hostname: master

# status:
#   availableReplicas: 1
#   conditions:
#   - lastTransitionTime: "2021-09-11T17:16:00Z"
#     lastUpdateTime: "2021-09-11T17:16:00Z"
#     message: Deployment has minimum availability.
#     reason: MinimumReplicasAvailable
#     status: "True"
#     type: Available
#   - lastTransitionTime: "2021-09-11T17:16:00Z"
#     lastUpdateTime: "2021-09-11T17:16:00Z"
#     message: ReplicaSet "local-path-provisioner-5ff76fc89d" has successfully progressed.
#     reason: NewReplicaSetAvailable
#     status: "True"
#     type: Progressing
#   observedGeneration: 1
#   readyReplicas: 1
#   replicas: 1
#   updatedReplicas: 1
